# xynenyx-llm

./: .env.example  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/middleware/: __init__.py  logging.py
app/prompts/: __init__.py  manager.py  templates.py
app/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  router.py
app/routers/: completions.py  embeddings.py  providers.py
app/schemas/: completions.py  embeddings.py  providers.py
app/services/: cache.py
app/tracking/: __init__.py  callbacks.py  usage.py
scripts/: test_service.sh
tests/: __init__.py  conftest.py  test_api.py  test_completions_integration.py  test_integration_real_api.py  test_prompts.py  test_providers.py  test_routing.py  test_streaming.py  test_usage.py
